<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="54dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sakilook" />

        <EditText
            android:id="@+id/usersname"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input"
            android:paddingLeft="20dp"
            android:text="@string/usersname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/mailadress"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input"
            android:paddingLeft="20dp"
            android:text="@string/mailadress"
            android:textSize="20dp" />

        <EditText

            android:id="@+id/password"
            android:layout_width="285dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input"
            android:paddingLeft="20dp"
            android:text="@string/password"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/birth"
            android:layout_marginBottom="5dp"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/year"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/bg_input"
                android:paddingLeft="50dp"
                android:text="@string/year"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/month"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:background="@drawable/bg_input"
                android:inputType="number"
                android:paddingLeft="50dp"
                android:text="@string/month"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/day"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:background="@drawable/bg_input"
                android:inputType="number"
                android:paddingLeft="50dp"
                android:text="@string/day"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#83DF8C"
            android:text="@string/signin"
            android:textColor="#F8F8F8"
            android:textSize="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>