<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/sakilookimg"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/sakilook" />

        <Button
            android:textColor="#F8F8F8"
            android:id="@+id/loginbt"
            android:layout_width="196dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:backgroundTint="#83DF8C"
            android:text="@string/login"
            android:textSize="17dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signinmsg"
            android:layout_gravity="center"
            android:layout_marginTop="57px"/>
        <Button
            android:textColor="#F8F8F8"
            android:layout_width="196dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:text="@string/signin"
            android:textSize="17dp"
            android:backgroundTint="#D9D9D9"/>
        <TextView
            android:text="@string/copywrite"
            android:textSize="39px"
            android:textColor="#818181"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="680px"/>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>